# sem4_cmc

./: CMakeLists.txt  blackav_format.xml  test
contest01/1/: 1.cpp
contest01/2/: 2  2.cpp
contest01/3/: 3  3.cpp
contest01/4/: 4  4.cpp
contest01/5/: 5  5.cpp
contest01/6/: 6  6.cpp
contest02/1/: 1  1.cpp
contest02/2/: 2  2.cpp
contest02/3/: 3.cpp
contest02/4/: 4  4.cpp
contest02/5/: 5.cpp
contest02/6/: 6.cpp
contest02/7/: 7.cpp
contest03/1/: 1.cpp
contest03/2/: 2.cpp
contest03/3/: 3.cpp
contest03/4/: 4.cpp  cmc_complex.h  cmc_complex_eval.h  cmc_complex_stack.h
contest03/6/: 6.cpp
contest04/1/: 1.cpp
contest04/2/: 2.cpp
contest04/3/: 3.cpp
contest04/4/: 4.cpp
contest04/5/: 5.cpp
contest05/1/: 1.cpp
contest05/2/: 2.cpp
contest05/3/: 3.cpp
contest05/4/: 4.cpp
contest05/5/: 5.cpp
contest06/1/: 1.cpp
contest06/2/: 2.cpp
contest06/3/: 3.cpp
contest06/4/: 4.cpp
contest06/5/: 5.cpp
contest07/1/: 1.cpp
contest07/2/: 2.cpp
contest07/3/: 3.cpp
contest07/4/: 4.cpp  4_2.cpp  4_3.cpp
contest07/5/: 5.cpp
contest08/1/: 1.cpp
contest08/2/: 2.cpp
contest08/3/: 3.cpp
contest08/4/: 4.cpp
contest08/5/: 5.cpp
contest09/1/: 1.cpp
contest09/2/: 2_1.cpp  2_2.cpp  test  test_sys.py
contest09/3/: 3.cpp  tmp.txt
contest09/4/: 4.cpp
contest09/5/: 5.cpp
contest10/1/: 1.cpp
contest10/2/: 2.cpp
contest10/3/: 3.cpp
contest10/4/: 4_1.cpp  4_2.cpp
contest10/5/: 5.cpp
