cmake_minimum_required(VERSION 3.24)
project(code)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_FLAGS "-fsanitize=address,undefined,signed-integer-overflow,pointer-compare,pointer-subtract,leak,bounds,pointer-overflow -O2 -Wall -std=gnu++2b -lm")
#set(CMAKE_CXX_FLAGS "-O2 -Wall -std=gnu++2b -lm")

#add_executable(1-1 contest01/1/1.cpp)
#add_executable(1-2 contest01/2/2.cpp)
#add_executable(1-3 contest01/3/3.cpp)
#add_executable(1-4 contest01/4/4.cpp)
#add_executable(1-5 contest01/5/5.cpp)
#add_executable(1-6 contest01/6/6.cpp)

#add_executable(2-1 contest02/1/1.cpp)
#add_executable(2-2 contest02/2/2.cpp)
#add_executable(2-3 contest02/3/3.cpp)
#add_executable(2-4 contest02/4/4.cpp)
#add_executable(2-5 contest02/5/5.cpp)
#add_executable(2-6 contest02/6/6.cpp)
#add_executable(2-7 contest02/7/7.cpp)

#add_executable(3-1 contest03/1/1.cpp)
#add_executable(3-2 contest03/2/2.cpp)
#add_executable(3-3 contest03/3/3.cpp)
#add_executable(3-4 contest03/4/4.cpp contest03/4/cmc_complex.h contest03/4/cmc_complex_stack.h contest03/4/cmc_complex_eval.h)

#add_executable(4-1 contest04/1/1.cpp)
#add_executable(4-2 contest04/2/2.cpp)
#add_executable(4-3 contest04/3/3.cpp)
#add_executable(4-4 contest04/4/4.cpp)
#add_executable(4-5 contest04/5/5.cpp)

#add_executable(5-1 contest05/1/1.cpp)
#add_executable(5-2 contest05/2/2.cpp)
#add_executable(5-3 contest05/3/3.cpp)
#add_executable(5-4 contest05/4/4.cpp)
#add_executable(5-5 contest05/5/5.cpp)

#add_executable(6-1 contest06/1/1.cpp)
#add_executable(6-2 contest06/2/2.cpp)
#add_executable(6-3 contest06/3/3.cpp)
#add_executable(6-4 contest06/4/4.cpp)
#add_executable(6-5 contest06/5/5.cpp)

#add_executable(7-1 contest07/1/1.cpp)
#add_executable(7-2 contest07/2/2.cpp)
add_executable(7-3 contest07/3/3.cpp)
add_executable(7-4 contest07/4/4.cpp)
add_executable(7-5 contest07/5/5.cpp)

#add_executable(8-1 contest08/1/1.cpp)
#add_executable(8-2 contest08/2/2.cpp)
#add_executable(8-3 contest08/3/3.cpp)
#add_executable(8-4 contest08/4/4.cpp)
#add_executable(8-5 contest08/5/5.cpp)

#add_executable(9-1 contest09/1/1.cpp)
#add_executable(9-2-1 contest09/2/2_1.cpp)
#add_executable(9-2-2 contest09/2/2_2.cpp)
#add_executable(9-3 contest09/3/3.cpp)
#add_executable(9-4 contest09/4/4.cpp)
#add_executable(9-5 contest09/5/5.cpp)

